task2 halfway done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,216 @@
     <title>Document</title>
 </head>
 <body>
-    Hello, world!
+    <img class="background-img" src="./icons/Decore.svg" alt="Background" />
+    <header class="header">
+        <img/>
+        <nav class="header-nav">
+            <a class="header-link" href="#">Home</a>
+            <a class="header-link" href="#">Menu</a>
+            <a class="header-link" href="#">Contact</a>
+            <a class="header-link" href="#">About Us</a>
+            <button class="sign-up-btn">Sign</button>
+        </nav>
+    </header>
+    <section class="main-page">
+        <section class="text">
+            <section>
+                <p>#1 Best Healthy Salad</p>
+                <h2><span style="color: orange;">Skip</span> The Diet, Just Eat Healthy With Jez Salad</h2>
+                <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+                <button>Order Food</button>
+            </section>
+            <section class="ratings">
+                <div>
+                    <p>5.000+</p>
+                    <p>Customers</p>
+                </div>
+                <div>
+                    <p>8.000+</p>
+                    <p>Delivery</p>
+                </div>
+                <div>
+                    <p>1.000+</p>
+                    <p>Ratings</p>
+                </div>
+            </section>
+        </section>
+        <aside class="image">
+            <img class="heart" src="./icons/Decore.svg" alt="Heart" />
+            <section>
+                <div class="customer-review">
+                    <img src="./icons/Decore.svg" alt="Customer" />
+                    <p>Our Happy Customer</p>
+                    <div>
+                        <img src="./icons/Decore.svg" alt="Star" />
+                        <p>4.9 <span>(1,989 Reviews)</span></p>
+                    </div>
+                </div>
+                <div class="calories">
+                    <p>Daily Calories</p>
+                    <p>123 Cal</p>
+                    <div>
+                        <progress value="30" max="100"></progress>
+                        <progress value="50" max="100"></progress>
+                        <progress value="60" max="100"></progress>
+                        <progress value="55" max="100"></progress>
+                        <progress value="50" max="100"></progress>
+                        <progress value="65" max="100"></progress>
+                        <progress value="75" max="100"></progress>
+                        <progress value="80" max="100"></progress>
+                    </div>
+                </div>
+            </section>
+        </aside>
+    </section>
+    <section class="why-us-page"">
+        <section class="text">
+            <h2>Why choose us for <span style="color: orange;">your healthy food</span></h2>
+            <p>We continue to consistently choose and maintain the quality of the fruit served, so that it remains fresh and nutritious when you eat it.</p>
+        </section>
+        <section class="cards">
+            <div class="card">
+                <img src="./icons/Decore.svg" alt="Card" />
+                <h4>Own fruit orchard</h4>
+                <p>Langsung dari Kebun Sendiri yang 
+                    tersebar di setiap provinsi yang 
+                    memiliki cabang toko Jez Salad.</p>
+                <a>Learn more <img/></a>
+            </div>
+            <div class="card">
+                <img src="./icons/Decore.svg" alt="Card" />
+                <h4>#1 Healthy Fruit Salad</h4>
+                <p>The pioneer of healthy fruit salads that 
+                    are delicious & suitable for all people 
+                    with the best quality assurance.</p>
+                <a>Learn more <img/></a>
+            </div>
+            <div class="card">
+                <img src="./icons/Decore.svg" alt="Card" />
+                <h4>100 Top Brand</h4>
+                <p>We are one of the best brands in the 
+                    Food and Beverage sector 
+                    in Indonesia.</p>
+                <a>Learn more <img/></a>
+            </div>
+        </section>
+    </section>
+    <section class="reviews">
+        <section class="reviews-text">
+            <h3>What Are People Saying About Us</h3>
+            <p>We are very happy if you are satisfied with our service and products, let's read pure reviews from customers who bought our products.</p>
+            <span> <b> 02 </b> / 05 </span>
+            <div>
+                <button> < </button>
+                <button> > </button>
+            </div>
+        </section>
+        <aside>
+            <article class="client-card">
+                <img/>
+                <h3>Selena Gomz</h3>
+                <p>22 Years</p>
+                <p>
+                    The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.
+                </p>
+            </article>
+            <article class="client-card">
+                <img/>
+                <h3>David Ken</h3>
+                <p>24 Years</p>
+                <p>
+                    The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.                </p>
+            </article>
+            <article class="client-card">
+                <img/>
+                <h3>Jennifer Sina</h3>
+                <p>21 Years</p>
+                <p>
+                    The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.                </p>
+            </article>
+        </aside>
+    </section>
+    <section class="menu">
+        <aside class="text">
+            <p>MENU YANG MEMBUATMU JATUH CINTA</p>
+            <h3>Enjoy The Best Menu And Get Discounts Available</h3>
+        </aside>
+        <div>
+            <div class="food-card">
+                <img/>
+                <p>Mini salad Yummy</p>
+                <p>$ 2.99</p>
+            </div>
+            <div class="food-card">
+                <img/>
+                <p>Completed Salad</p>
+                <p>$ 3.99</p>
+            </div>
+            <div class="food-card">
+                <img/>
+                <p>Salad Yummy Red</p>
+                <p>$ 3.99</p>
+            </div>
+        </div>
+    </section>
+    <section class="subscription">
+        <img/>
+        <div>
+            <p>Our Subscribe</p>
+            <h2>Subscribe To Get The Latest Promo from Jez Salad</h2>
+            <p>We recommended you to subscribe to our promo program, 
+                drop your email below to get daily update about us</p>
+            <div class="subscription-box">
+                <input type="email" placeholder="Enter your email address">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="logo">
+            <img/>
+            <p>Jez Salad is the pioneer of 
+                healthy fruit salad with 
+                high nutrition.</p>
+            <p>©Copyright Jez Salad</p>
+        </div>
+        <div class="links">
+            <p><b>Feature</b></p>
+            <a>Menu</a>
+            <a>Promo</a>
+            <a>Contact</a>
+            <a>About us</a>
+        </div>
+        <div class="get-in-touch">
+            <p><b>Get in Touch</b></p>
+            <div class="touch-entry">
+                <img/>
+                <p>8819 Ohio St. South Gate,
+                    CA 90280</p>
+            </div>
+            <div class="touch-entry">
+                <img/>
+                <p>Ourstudio@hello.com</p>
+            </div>
+            <div class="touch-entry">
+                <img/>
+                <p>+1 386-688-3295</p>
+            </div>
+        </div>
+        <div class="social-links">
+            <div class="links-container">
+                <p><a href="https://www.w3schools.com">
+                    <img src="w3html.gif" alt="W3Schools.com" width="100" height="132">
+                    </a></p>
+                    <p><a href="https://www.w3schools.com">
+                        <img src="w3html.gif" alt="W3Schools.com" width="100" height="132">
+                    </a></p>
+                    <p><a href="https://www.w3schools.com">
+                        <img src="w3html.gif" alt="W3Schools.com" width="100" height="132">
+                    </a></p>
+            </div>
+            <p>Follow our social media.</p>
+        </div>
+    </footer>
 </body>
 </html>
