--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
          </nav>
       </header>
       <section class="main-page">
-         <section class="text">
+         <section class="main-text">
             <section>
                <p>#1 Best Healthy Salad</p>
                <h2><span style="color: orange;">Skip</span> The Diet, Just Eat Healthy With Jez Salad</h2>
                <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
                <button>Order Food</button>
             </section>
-            <section class="ratings">
+            <section class="main-statistics">
                <div>
                   <p>5.000+</p>
                   <p>Customers</p>
@@ -40,7 +40,7 @@
                </div>
             </section>
          </section>
-         <aside class="image">
+         <aside class="main-image">
             <img class="heart" src="./icons/Decore.svg" alt="Heart" />
             <section>
                <div class="customer-review">
@@ -73,8 +73,8 @@
             <h2>Why choose us for <span style="color: orange;">your healthy food</span></h2>
             <p>We continue to consistently choose and maintain the quality of the fruit served, so that it remains fresh and nutritious when you eat it.</p>
          </section>
-         <section class="cards">
-            <div class="card">
+         <section class="info-cards">
+            <div class="info-card">
                <img src="./icons/Decore.svg" alt="Card" />
                <h4>Own fruit orchard</h4>
                <p>Langsung dari Kebun Sendiri yang 
@@ -83,7 +83,7 @@
                </p>
                <a>Learn more <img /></a>
             </div>
-            <div class="card">
+            <div class="info-card">
                <img src="./icons/Decore.svg" alt="Card" />
                <h4>#1 Healthy Fruit Salad</h4>
                <p>The pioneer of healthy fruit salads that 
@@ -92,7 +92,7 @@
                </p>
                <a>Learn more <img /></a>
             </div>
-            <div class="card">
+            <div class="info-card">
                <img src="./icons/Decore.svg" alt="Card" />
                <h4>100 Top Brand</h4>
                <p>We are one of the best brands in the 
@@ -108,12 +108,12 @@
             <h3>What Are People Saying About Us</h3>
             <p>We are very happy if you are satisfied with our service and products, let's read pure reviews from customers who bought our products.</p>
             <span> <b> 02 </b> / 05 </span>
-            <div>
-               <button> <img /> </button>
-               <button> <img /> </button>
+            <div class="review-buttons">
+               <button class="left-button"> <img /> </button>
+               <button class="right-button"> <img /> </button>
             </div>
          </section>
-         <div>
+         <div class="client-cards">
             <article class="client-card">
                <img />
                <h3>Selena Gomz</h3>
@@ -145,7 +145,7 @@
             <p>MENU YANG MEMBUATMU JATUH CINTA</p>
             <h3>Enjoy The Best Menu And Get Discounts Available</h3>
          </div>
-         <div>
+         <div class="food-cards">
             <div class="food-card">
                <img />
                <p>Mini salad Yummy</p>
@@ -165,7 +165,7 @@
       </section>
       <section class="subscription">
          <img />
-         <div>
+         <div class="subscription-container">
             <p>Our Subscribe</p>
             <h2>Subscribe To Get The Latest Promo from Jez Salad</h2>
             <p>We recommended you to subscribe to our promo program, 
