--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="styles.css">
    </head>
    <body>
-      <!-- <img class="background-img" src="./icons/background.svg" alt="Background" /> -->
+      <img class="background-img" src="./icons/background.png" alt="Background" />
       <header class="main-header">
          <a class="logo-header"><span class="orange-highlight">JEZ</span> SALAD</a>
          <nav class="header-nav">
@@ -40,8 +40,8 @@
             </div>
          </div>
          <aside class="main-image">
-            <img class="header-image" src="./icons/woman.png" alt="Header Image" />
-            <img class="heart" src="./icons/heart.svg" alt="Heart" />
+            <!-- <img class="header-image" src="./icons/woman.png" alt="Header Image" />
+            <img class="heart" src="./icons/heart.svg" alt="Heart" /> -->
             <div>
                <div class="customer-review">
                   <img src="./icons/smile.svg" alt="Smiling emoji" />
@@ -145,28 +145,26 @@
       <section class="menu">
          <div class="text">
             <h5>MENU YANG MEMBUATMU JATUH CINTA</h5>
-            <h2>Enjoy The Best Menu And Get Discounts Available</h2>
+            <h2>ENJOY THE BEST MENU AND GET 
+               <span style="color: #FB9333" >DISCOUNTS</span> AVAILABLE</h2>
          </div>
          <div class="food-cards">
-            <div class="food-card">
-               <img src="icons/salad1.png" alt="FruitSalad" />
+            <div class="food-card" style="background-image: url('icons/salad1.png');">
                <span class="food-name">Mini salad Yummy</span>
                <span class="food-price">$ 2.99</span>
-            </div>
-            <div class="food-card">
-               <img src="icons/salad2.png" alt="FruitSalad" />
+           </div>
+           <div class="food-card" style="background-image: url('icons/salad2.png');">
                <span class="food-name">Completed Salad</span>
                <span class="food-price">$ 3.99</span>
-            </div>
-            <div class="food-card">
-               <img src="icons/salad3.png" alt="FruitSalad"/>
+           </div>
+           <div class="food-card" style="background-image: url('icons/salad3.png');">
                <span class="food-name">Salad Yummy Red</span>
                <span class="food-price">$ 3.99</span>
-            </div>
+           </div>
          </div>
       </section>
       <section class="subscription">
-         <img src="icons/background_input.svg" alt="background" />
+         <!-- <img src="icons/background_input.svg" alt="background" /> -->
          <div class="subscription-container">
             <span>Our Subscribe</span>
             <h2 class="bold-h2">Subscribe To Get The Latest Promo from Jez Salad</h2>
@@ -181,7 +179,7 @@
       </section>
       <footer>
          <div class="logo">
-            <a class="footer-logo">JEZ SALAD</a>
+            <a class="footer-logo"><span class="jez">JEZ</span> SALAD</a>
             <p>Jez Salad is the pioneer of 
                healthy fruit salad with 
                high nutrition.
@@ -199,17 +197,17 @@
             <span class="footer-bold">Get in Touch</span>
             <div class="touch-entry">
                <img src="icons/location_on.png" alt="location" />
-               <span>8819 Ohio St. South Gate,
+               <span class="touch-text">8819 Ohio St. South Gate,
                   CA 90280
                </span>
             </div>
             <div class="touch-entry">
                <img src="icons/email.png" alt="email" />
-               <span>Ourstudio@hello.com</span>
+               <span class="touch-text">Ourstudio@hello.com</span>
             </div>
             <div class="touch-entry">
                <img src="icons/call.png" />
-               <span>+1 386-688-3295</span>
+               <span class="touch-text">+1 386-688-3295</span>
             </div>
          </div>
          <div class="social-links">
