subscribe halfway done

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
          <!-- <img src="icons/background_input.svg" alt="background" /> -->
          <div class="subscription-container">
             <span>Our Subscribe</span>
-            <h2 class="bold-h2">Subscribe To Get The Latest Promo from Jez Salad</h2>
-            <p>We recommended you to subscribe to our promo program, 
+            <h2 class="bold-h2">Subscribe To Get The Latest<br>Promo from Jez Salad</h2>
+            <p>We recommended you to subscribe to our promo program, <br>
                drop your email below to get daily update about us
             </p>
             <form class="subscription-box">
