--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                </div>
                <div class="calories">
                   <span>Daily Calories</span>
-                  <h6><span class="calories-bold">123</span> Cal</h6>
+                  <h6><b>123</b> Cal</h6>
                   <div class="calorie-progress-container">
                      <div class="progress-bar" style="--value: 30%"></div>
                      <div class="progress-bar" style="--value: 50%"></div>
@@ -72,7 +72,7 @@
       </section>
       <section class="why-us-page">
          <div class="text">
-            <h2>WHY CHOOSE US FOR <span class="orange-highlight">YOUR HEALTHY FOOD</span></h2>
+            <h2>WHY CHOOSE US  <br>FOR <span class="orange-highlight">YOUR HEALTHY FOOD</span></h2>
             <p>We continue to consistently choose and maintain the quality of the fruit served, so that it remains fresh and nutritious when you eat it.</p>
          </div>
          <div class="info-cards">
