--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="styles.css">
    </head>
    <body>
-      <img class="background-img" src="./icons/background.png" alt="Background" />
+      <!-- <img class="background-img" src="./icons/background.png" alt="Background" /> -->
       <header class="main-header">
          <a class="logo-header"><span class="orange-highlight">JEZ</span> SALAD</a>
          <nav class="header-nav">
@@ -39,9 +39,9 @@
                </div>
             </div>
          </div>
+         <img class="background-img" src="./icons/background.png" alt="Background" >
          <aside class="main-image">
-            <!-- <img class="header-image" src="./icons/woman.png" alt="Header Image" />
-            <img class="heart" src="./icons/heart.svg" alt="Heart" /> -->
+            
             <div>
                <div class="customer-review">
                   <img src="./icons/smile.svg" alt="Smiling emoji" />
@@ -69,6 +69,7 @@
                </div>
             </div>
          </aside>
+         </img>
       </section>
       <section class="why-us-page">
          <div class="text">
@@ -83,7 +84,7 @@
                   tersebar di setiap provinsi yang 
                   memiliki cabang toko Jez Salad.
                </p>
-               <a>Learn more <img src="icons/nav-right.svg" style="color: black;" alt="arrow" /> </a>
+               <div class="learn-more"><a><div class="test">Learn more <img src="icons/nav-right.svg" alt="arrow" /></div></a></div>
             </div>
             <div class="info-card">
                <img src="./icons/Icon2.svg" alt="NumberOneIcon" />
@@ -92,7 +93,7 @@
                   are delicious & suitable for all people 
                   with the best quality assurance.
                </p>
-               <a>Learn more <img src="icons/nav-right.svg" alt="arrow" /></a>
+               <div class="learn-more"><a><div class="test">Learn more <img src="icons/nav-right.svg" alt="arrow" /></div></a></div>
             </div>
             <div class="info-card">
                <img src="./icons/Icon3.svg" alt="ChampionIcon" />
@@ -101,14 +102,14 @@
                   Food and Beverage sector 
                   in Indonesia.
                </p>
-               <a>Learn more <img src="icons/nav-right.svg" alt="arrow" /></a>
+               <div class="learn-more"><a><div class="test">Learn more <img src="icons/nav-right.svg" alt="arrow" /></div></a></div>
             </div>
          </div>
       </section>
       <section class="reviews">
          <div class="reviews-text">
             <h2 class="bold-h2">What Are People Saying <span class = "orange-highlight">About Us</span></h2>
-            <p class="reviews-description">We are very happy if you are satisfied with our service and products, let's read pure reviews from customers who bought our products.</p>
+            <p class="reviews-description">We are very happy if you are satisfied with our<br>  service and products, let's read pure reviews from customers who bought our products.</p>
             <span class = "num"> <b> 02 </b> / 05 </span>
             <div class="review-buttons">
                <button class="left-button"> <img src="icons/nav-left.svg" /> </button>
